# replaygate

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/replaygate/: invariants.py  playground.ipynb  regress.py
src/replaygate/capture/: adapters.py  errors.py  llm.py  providers.py  record.py  replay.py  spans.py  tools.py
src/replaygate/cli/: main.py
src/replaygate/examples/: booking_agent.py  invariants.py  judge_dimensions.py  profile_agent.py  scenarios.py  support_agent.py
src/replaygate/judge/: __init__.py  claude.py  models.py  record.py  registry.py
src/replaygate/store/: fixtures.py  spans.py
src/replaygate/trace/: models.py
tests/: test_cross_version_regress.py  test_invariants.py  test_regress.py  test_smoke.py
tests/capture/: test_adapters.py  test_divergence.py  test_hardening.py  test_llm.py  test_providers.py  test_record.py  test_replay.py  test_span_collector.py  test_tools.py
tests/cli/: test_cli_errors.py  test_cross_version_cli.py  test_record_cmd.py  test_regress_cli.py  test_regress_golden.py
tests/examples/: test_booking_agent.py  test_candidates.py  test_profile_agent.py  test_support_agent.py
tests/judge/: test_claude.py  test_judge_record_cli.py  test_judge_regress_cli.py  test_models.py  test_offline_purity.py  test_record.py  test_registry.py
tests/store/: test_fixtures.py  test_spans.py
tests/trace/: test_conversation.py  test_models.py
