[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "replaygate"
version = "0.1.0"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>=2",
    "duckdb>=1.1",
    "typer>=0.12",
    "rich>=13",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
# Live recording against real providers. anthropic ships in core deps; openai
# covers OpenAI, OpenRouter, and Ollama (all OpenAI-compatible).
providers = ["openai>=1.0", "python-dotenv>=1.0"]

[project.scripts]
replaygate = "replaygate.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/replaygate"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]
